# certifyforge-reasoning-agents

./: .gitignore  HACKATHON_PORTAL_DEMO_GUIDE.md  LICENSE  README.md  REVIEW_AND_DEMO.py  azure.yaml  pyproject.toml  review_demo.py
.github/workflows/: tests.yml
.grok/skills/hosted-agent-dev-loop/: SKILL.md
infra/: main.bicep  main.parameters.json
infra/core/ai/: existing-ai-project.bicep
scripts/: populate_search_index.py
src/certifyforge_agents/: .dockerignore  Dockerfile  README.md  STATUS.md  __init__.py  __main__.py  agent.yaml  demo_orchestration.py  entrypoint.sh  errors.py  readiness_server.py  request_validation.py  requirements.txt  test_fabric_iq.py  test_factory.py
src/certifyforge_agents/agents/: assessment_agent.py  base.py  citations.py  engagement_agent.py  learning_path_curator.py  manager_insights_agent.py  study_plan_generator.py
src/certifyforge_agents/data/: README.md  certification_skill.md  factory.py  learners.json  loader.py  models.py
src/certifyforge_agents/evaluation/: critic.py  simple_critic.py
src/certifyforge_agents/grounding/: __init__.py  azure_search_foundry_iq.py  base.py  fabric_iq.py  foundry_iq.py  foundry_llm.py
src/data/: work_signals.json
tests/: conftest.py  test_citations.py  test_critic.py  test_demo_orchestration.py  test_errors.py  test_fabric_iq.py  test_factory.py  test_foundry_config.py  test_foundry_llm.py  test_learning_path_curator.py  test_orchestrator.py  test_parse_user_intent.py  test_readiness_server.py  test_request_validation.py  test_run_full_orchestration.py  test_specialist_agents.py
(+8 files in other folders)
